feat: add page detail

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,6 +1,7 @@
 @import "./layouts/default.scss";
 @import "./layouts/landing.scss";
 @import "./pages/home.scss";
+@import "./pages/detail.scss";
 
 *,
 *::before,
